DOC-1754: Added the missing toolbar and menu item docs

--- a/modules/ROOT/pages/advanced-typography.adoc
+++ b/modules/ROOT/pages/advanced-typography.adoc
@@ -35,7 +35,7 @@ For example:
 tinymce.init({
   selector: 'textarea',  // change this value according to your HTML
   plugins: '{plugincode}',
-  toolbar: 'typography',
+  toolbar: '{plugincode}',
   language: 'en_US' // This is required to configure the default language used by typography.
 });
 ----
