DOC-1777: 6.3-release-notes.adoc
re-added notes re TINY-9398 known issue write-up.

--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -102,10 +102,26 @@ As of this release, the only workaround is to either not specify a **SpellChecke
 // https://ephocks.atlassian.net/browse/TINY-9332
 
 
-==== Fix removing spaces between ! ! (P3)
+==== The Advanced Typography plugin does not support removing spaces between exclamation points.
 
-// https://ephocks.atlassian.net/browse/TINY-9398
-// awaiting content as we don’t support `common/space/delBetweenExclamationMarks` currently.
+We don’t support `common/space/delBetweenExclamationMarks` currently.
+According to https://ephocks.atlassian.net/browse/TINY-9398[TINY-9398]:
+
+> We only support rules from the ticket https://ephocks.atlassian.net/browse/QA-875[QA-875].
+> -- kate.potemina
+
+And `common/space/delBetweenExclamationMarks` is not in that QA ticket, so nothing to see or write here.
+
+However, also according to https://ephocks.atlassian.net/browse/TINY-9398[TINY-9398]:
+
+> There is requirement in https://notion.so/tinycloud/Advanced-Smart-Typography-Discovery-76af09a3f8c943a5a961f95ce902ffe2[notion]
+> -- kate.potemina
+
+So, there is something to write here.
+
+Which is true?
+
+And what to write if the latter is the case?
 
 [[accompanying-premium-plugin-changes]]
 == Accompanying Premium Plugin changes
