--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -331,16 +331,13 @@ With {productname} 6.3 the `getCurrentColor` now checks for the first found `bac
 
 {productname} 6.3 also includes the following additions:
 
-=== New expand function added to tinymce.selection which expands the selection around the nearest word.
-=== New expand function added to tinymce.dom.RangeUtils to return a new range expanded around the nearest word.
+=== New expand functions added to tinymce.selection and tinymce.dom.RangeUtils which expand the selection around the nearest word.
 
-// https://ephocks.atlassian.net/browse/TINY-9001
-// @bforte re-review as small changes where made to cover the `tinymce.dom.RangeUtils` also in more detail.
-{productname} 6.3 introduced two new API functions that allow a user to select a word from the insertion point location which applies a new `expand` feature.
+{productname} 6.3 introduced two new API functions that allow a user to select a word from the insertion point location which applies a new expand feature.
 
 This new `tinymce.selection` API function allows {productname} users and developers to expand the selection range to contain the entire word when the selection is collapsed within the word.
 
-To support this new API function, {product name} 6.3 introduced `tinymce.dom.RangeUtils`, which is focuses on a new `expand` method range that expands around the entire word that the user selection was collapsed within by the `tinymce.selection` API function.
+To support this new API function, {product name} 6.3 also introduced `tinymce.dom.RangeUtils`, which focuses on a new `expand` method range that expands around the entire word that the user selection was collapsed within by the `tinymce.selection` API function.
 
 If, in the following example, a user places the insertion point between the first and second `m` in the word, `comment`, then clicks the _Add comment_ toolbar button, or selects _Insert > Add comment_ from the TinyMCE menu, or presses the _Add comment_ keyboard shortcut  (eg ⌘+⌥+M) — 
 
@@ -353,8 +350,7 @@ If, in the following example, a user places the insertion point between the firs
 </p>
 ----
 
-// https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
-
+— {productname} 6.3 will automatically expand the selection to include the whole word, ‘Comment’.
 
 === New color_map_background and color_map_foreground option which sets the base colors used in the backcolor and forecolor toolbar buttons and menu items.
 === Added optional storageKey property to colorinput component and colorswatch fancy menu item.
